# cpp20train

./: .gitignore  CMakeLists.txt  meson.build
src/: concepttrain.cpp  coroutinetrain.cpp  friendtrain.cpp  futuretrain.cpp  main.cpp  rangestrain.cpp  selftrain.cpp  structtrain.cpp  templatetrain.cpp  visittrain.cpp
src/concepttrain/: gamera.hpp  metatypes.h
